--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,8 +112,8 @@ knp_snappy:
             - { name: 'footer-line', value: true }
             - { name: 'enable-javascript', value: true }
             - { name: 'no-stop-slow-scripts', value: true }
-            - { name: 'javascript-delay', value: '10000' }
-            - { name: 'debug-javascript', value: true }
+            - { name: 'javascript-delay', value: '5000' }
+            - { name: 'debug-javascript', value: false }
             
 mobile_detect:
     redirect:
