--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,6 +27,12 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+            
+        api:
+            pattern: ^/api/
+            guard:
+                authenticators:
+                    - app.security.api_token_authenticator
 
         main:
             anonymous: ~
@@ -52,11 +58,7 @@ security:
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
             
-        api:
-            pattern: ^/api/*
-            guard:
-                authenticators:
-                    - app.security.api_token_authenticator
+        
 
     access_control:
         - { path: ^/peoplecounting/slack_occupancy/*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
