Disabled some auditing

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -159,13 +159,13 @@ xiidea_easy_audit:
          AppBundle\Entity\medical_log: ~
          AppBundle\Entity\security_log: ~
          AppBundle\Entity\lost_property: ~
-         AppBundle\Entity\event_control_register: ~
+         #AppBundle\Entity\event_control_register: ~
          AppBundle\Entity\User: ~
-         AppBundle\Entity\UPS: ~
+         #AppBundle\Entity\UPS: ~
 
     #List all events you want to track  (Optional from v1.2.1 you can now use subscriber to define it)
     events :                                                   #Optional
-        - security.interactive_login
+        #- security.interactive_login
         - security.authentication.failure
 
     #List all custom resolver for event
