--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "symfony/symfony": "3.3.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.6",
-        "symfony/assetic-bundle": "~2.3",
+        "symfony/assetic-bundle": "~2.8",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "5.0.14",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/distribution-bundle": "~5.0",
+        "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "ircmaxell/password-compat": "^1.0",
