--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,7 @@ app:
   
 logout:
     path: /logout
+
+jmose_command_scheduler:
+    resource: "@JMoseCommandSchedulerBundle/Resources/config/routing.yml"
+    prefix:   /
