--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "dzunke/slack-bundle": "dev-master",
         "kreait/firebase-php": "^3.0",
         "redjanym/fcm-bundle": "1.*",
-	"jmose/command-scheduler-bundle": "1.*"
+	"jmose/command-scheduler-bundle": "1.*",
+        "ob/highcharts-bundle": "^1.5"
 
     },
     "require-dev": {
