--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -44,4 +44,9 @@ services:
 
         tags:
             - { name: twig.extension }
-
+    
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+        public:    false
+        arguments:
+            - 'mysql:host=%database_host%;port=%database_port%;dbname=%database_name%'
+            - { db_username: '%database_user%', db_password: '%database_password%' }
