--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -143,6 +143,7 @@ vich_uploader:
             delete_on_remove:   true
             
             #namer:              vich_uploader.namer_uniqid
+            namer:  vich_uploader.namer_origname
     
 xiidea_easy_audit:
     entity_class : AppBundle\Entity\AuditLog
