--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,6 +52,7 @@ twig:
         gmapsKey: "%gmaps_apikey%"
         weatherUser: "%raintoday_username%"
         weatherPass: "%raintoday_password%"
+        log_support_directory: '%kernel.root_dir%/../media/log_support'
     date:
         timezone: UTC
 
