--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,6 @@ logout:
 jmose_command_scheduler:
     resource: "@JMoseCommandSchedulerBundle/Resources/config/routing.yml"
     prefix:   /
+    
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
