--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,8 +36,8 @@ framework:
         # handler_id set to null will use default session handler from php.ini
         cookie_lifetime: 21600
         gc_maxlifetime: 21600
-        #handler_id:  ~
-        handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
+        handler_id:  ~
+        #handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
         
     fragments:       ~
     http_method_override: true
